Completely overhaul the Aspose module